[tool.poetry]
name = "entity-api"
version = "0.1.0"
description = ""
authors = ["lgarma <garmahds@gmail.com>"]
readme = "README.md"
packages = [{include = "entity_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
spacy = "^3.7.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
